Avoid overlapping header links. (fix #407)

--- a/paralapraca/static/scss/layout/_site-header.scss
+++ b/paralapraca/static/scss/layout/_site-header.scss
@@ -94,7 +94,7 @@
         }
         .user-icon {
             float: left;
-            margin: 0 5px; 
+            margin: 0 5px;
         }
         .user-name {
             display: block;
@@ -128,7 +128,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        position: absolute;
         height: 100%;
+        left: 25%;
+        width: 50%;
     }
 }
 
